--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -111,10 +111,11 @@
 							</td>
 							<td>
 								<s:decorate template="../layout/edit.xhtml" style="width:600px">
-									<ui:define name="label">CV formateurs souhaités</ui:define>
-									<h:selectOneMenu value="#{intraManager.intra.cv}">
-										<f:selectItem itemValue="0" itemLabel="NON"/>
-									   	<f:selectItem itemValue="1" itemLabel="OUI"/>
+									<ui:define name="label">Certification ?</ui:define>
+									<h:selectOneMenu value="#{intraManager.intra.certification}">
+										<f:selectItem itemValue="NON" itemLabel="NON"/>
+									   	<f:selectItem itemValue="OUI" itemLabel="OUI"/>
+									   	<f:selectItem itemValue="Peut-être" itemLabel="Peut-être"/>
 									</h:selectOneMenu>
 								</s:decorate>
 							</td>
