Champs pré-requis

--- a/WebContent/mz/Intra/_infoAuxiliaireTable.xhtml
+++ b/WebContent/mz/Intra/_infoAuxiliaireTable.xhtml
@@ -28,8 +28,8 @@
 					<tr>
 						<td><s:decorate template="../layout/edit.xhtml"
 								style="width:600px">
-								<ui:define name="label">Environnement technique</ui:define>
-								<h:outputText value="#{intra.environnementTech}" />
+								<ui:define name="label">Les pax disposent-ils des pré-requis ?</ui:define>
+								<h:outputText value="#{intra.preRequis}" />
 							</s:decorate></td>
 					</tr>
 				</table>
