--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -305,8 +305,8 @@
 									<tr>
 										<td>
 							           		<s:decorate template="../layout/edit.xhtml" style="width:600px">
-												<ui:define name="label">Environnement technique</ui:define>
-												<h:inputTextarea value="#{intraManager.intra.environnementTech}" cols="60" rows="2"/>
+												<ui:define name="label">Les pax disposent-ils des pré-requis ?</ui:define>
+												<h:inputTextarea value="#{intraManager.intra.preRequis}" cols="60" rows="2"/>
 										   	</s:decorate>
 										</td>
 										<td>
