--- a/WebContent/mz/Intra/editIntra.xhtml
+++ b/WebContent/mz/Intra/editIntra.xhtml
@@ -124,9 +124,9 @@
 						<td><s:decorate template="../layout/display.xhtml"
 								style="width:500px;">
 								<ui:define name="label">
-									<h:outputText value="Env. technique" />
+									<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 								</ui:define>
-								<h:inputTextarea value="#{intraManager.intra.environnementTech}"
+								<h:inputTextarea value="#{intraManager.intra.preRequis}"
 									cols="60" rows="2" />
 							</s:decorate></td>
 					</tr>
