--- a/WebContent/mz/Intra/visuIntra.xhtml
+++ b/WebContent/mz/Intra/visuIntra.xhtml
@@ -165,9 +165,9 @@
 					<td><s:decorate template="../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
-								<h:outputText value="Environnement technique" />
+								<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 							</ui:define>
-							<h:outputText value="#{intraManager.intra.environnementTech}" />
+							<h:outputText value="#{intraManager.intra.preRequis}" />
 						</s:decorate></td>
 				</tr>
 				<tr>
