--- a/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
+++ b/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
@@ -24,10 +24,10 @@
 					</s:decorate></td>
 				<td><s:decorate template="../../layout/display.xhtml">
 						<ui:define name="label">
-							<h:outputText value="Env. technique" />
+							<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 						</ui:define>
 						<h:inputTextarea
-							value="#{editProspectManager.prospect.informationIntra.environnementTech}"
+							value="#{editProspectManager.prospect.informationIntra.preRequis}"
 							cols="60" rows="2" />
 					</s:decorate></td>
 			</tr>
