--- a/WebContent/mz/prospect/panels/_visuEnvironnement.xhtml
+++ b/WebContent/mz/prospect/panels/_visuEnvironnement.xhtml
@@ -21,9 +21,9 @@
 					<td><s:decorate template="../../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
-								<h:outputText value="Environnement technique" />
+								<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 							</ui:define>
-							<h:outputText value="#{editProspectManager.prospect.informationIntra.environnementTech}" />
+							<h:outputText value="#{editProspectManager.prospect.informationIntra.preRequis}" />
 						</s:decorate></td>
 				</tr>
 				<tr>
