--- a/WebContent/mz/prospect/panels/_visuIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_visuIntra.xhtml
@@ -396,10 +396,10 @@
 						</s:decorate></td>
 					<td><s:decorate template="../../layout/display.xhtml">
 							<ui:define name="label">
-								<h:outputText value="Env. technique" />
+								<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 							</ui:define>
 							<h:outputText
-								value="#{editProspectManager.prospect.informationIntra.environnementTech}" />
+								value="#{editProspectManager.prospect.informationIntra.preRequis}" />
 						</s:decorate></td>
 				</tr>
 				<tr>
