--- a/WebContent/mz/prospect/panels/_editEnvironnement.xhtml
+++ b/WebContent/mz/prospect/panels/_editEnvironnement.xhtml
@@ -16,7 +16,8 @@
 					<ui:define name="label">
 						<h:outputText value="Profil des participants" />
 					</ui:define>
-					<h:inputTextarea value="#{editProspectManager.prospect.informationIntra.profilParticipant}"
+					<h:inputTextarea
+						value="#{editProspectManager.prospect.informationIntra.profilParticipant}"
 						cols="60" rows="2" />
 				</s:decorate></td>
 			<td><s:decorate template="../../layout/display.xhtml"
@@ -24,7 +25,8 @@
 					<ui:define name="label">
 						<h:outputText value="Les pax disposent-ils des pré-requis ?" />
 					</ui:define>
-					<h:inputTextarea value="#{editProspectManager.prospect.informationIntra.preRequis}"
+					<h:inputTextarea
+						value="#{editProspectManager.prospect.informationIntra.preRequis}"
 						cols="60" rows="2" />
 				</s:decorate></td>
 		</tr>
@@ -34,16 +36,22 @@
 					<ui:define name="label">
 						<h:outputText value="Connaissance sujet" />
 					</ui:define>
-					<h:inputTextarea value="#{editProspectManager.prospect.informationIntra.connaissanceSujet}"
-						cols="60" rows="2" />
+					<h:selectOneMenu value="#{intraManager.intra.connaissanceSujet}"
+						style="width:160px; height:20px;" required="true">
+						<f:selectItem itemValue="" itemLabel="-- Choisir --" />
+						<f:selectItem itemValue="Débutant" itemLabel="Débutant" />
+						<f:selectItem itemValue="Scolaire" itemLabel="Scolaire" />
+						<f:selectItem itemValue="Expert" itemLabel="Expert" />
+					</h:selectOneMenu>
 				</s:decorate></td>
 			<td><s:decorate template="../../layout/display.xhtml"
 					style="width:500px;">
 					<ui:define name="label">
 						<h:outputText value="Objectif" />
 					</ui:define>
-					<h:inputTextarea value="#{editProspectManager.prospect.informationIntra.objectif}" cols="60"
-						rows="2" />
+					<h:inputTextarea
+						value="#{editProspectManager.prospect.informationIntra.objectif}"
+						cols="60" rows="2" />
 				</s:decorate></td>
 		</tr>
 		<tr>
@@ -53,8 +61,8 @@
 						<h:outputText value="Contact tech." />
 					</ui:define>
 					<h:inputTextarea
-						value="#{editProspectManager.prospect.informationIntra.coordonneesContactTech}" cols="60"
-						rows="2" />
+						value="#{editProspectManager.prospect.informationIntra.coordonneesContactTech}"
+						cols="60" rows="2" />
 				</s:decorate></td>
 		</tr>
 	</table>
