--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -379,6 +379,20 @@
 									<tr>
 										<td><s:decorate template="../layout/edit.xhtml"
 												style="width:600px">
+												<ui:define name="label">Contraintes particulières </ui:define>
+												<h:inputTextarea value="#{intraManager.intra.contraintesParticulieres}"
+													cols="60" rows="2" />
+											</s:decorate></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<table border="0" cellspacing="15">
+									<tr>
+										<td><s:decorate template="../layout/edit.xhtml"
+												style="width:600px">
 												<ui:define name="label">Objectifs </ui:define>
 												<h:inputTextarea value="#{intraManager.intra.objectif}"
 													cols="60" rows="2" />
@@ -402,8 +416,7 @@
 									</tr>
 								</table>
 							</td>
-						</tr>
-						<tr>
+
 							<td>
 								<table border="0" cellspacing="15">
 									<tr>
