--- a/WebContent/mz/Intra/visuIntra.xhtml
+++ b/WebContent/mz/Intra/visuIntra.xhtml
@@ -181,12 +181,20 @@
 					<td><s:decorate template="../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
+								<h:outputText value="Contraintes particulières" />
+							</ui:define>
+							<h:outputText value="#{intraManager.intra.contraintesParticulieres}" />
+						</s:decorate></td>
+				</tr>
+				<tr>
+					<td><s:decorate template="../layout/display.xhtml"
+							style="width:500px;">
+							<ui:define name="label">
 								<h:outputText value="Objectif" />
 							</ui:define>
 							<h:outputText value="#{intraManager.intra.objectif}" />
 						</s:decorate></td>
-				</tr>
-				<tr>
+
 					<td><s:decorate template="../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
