--- a/WebContent/mz/prospect/panels/_visuEnvironnement.xhtml
+++ b/WebContent/mz/prospect/panels/_visuEnvironnement.xhtml
@@ -37,12 +37,20 @@
 					<td><s:decorate template="../../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
+								<h:outputText value="Contraintes particulières" />
+							</ui:define>
+							<h:outputText value="#{editProspectManager.prospect.informationIntra.contraintesParticulieres}" />
+						</s:decorate></td>
+				</tr>
+				<tr>
+					<td><s:decorate template="../../layout/display.xhtml"
+							style="width:500px;">
+							<ui:define name="label">
 								<h:outputText value="Objectif" />
 							</ui:define>
 							<h:outputText value="#{editProspectManager.prospect.informationIntra.objectif}" />
 						</s:decorate></td>
-				</tr>
-				<tr>
+
 					<td><s:decorate template="../../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
