--- a/WebContent/mz/prospect/panels/_visuIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_visuIntra.xhtml
@@ -412,6 +412,15 @@
 						</s:decorate></td>
 					<td><s:decorate template="../../layout/display.xhtml">
 							<ui:define name="label">
+								<h:outputText value="Contraintes particulières" />
+							</ui:define>
+							<h:outputText
+								value="#{editProspectManager.prospect.informationIntra.contraintesParticulieres}" />
+						</s:decorate></td>
+				</tr>
+				<tr>
+					<td><s:decorate template="../../layout/display.xhtml">
+							<ui:define name="label">
 								<h:outputText value="Objectif" />
 							</ui:define>
 							<h:outputText
