--- a/WebContent/mz/prospect/panels/_editEnvironnement.xhtml
+++ b/WebContent/mz/prospect/panels/_editEnvironnement.xhtml
@@ -47,14 +47,24 @@
 			<td><s:decorate template="../../layout/display.xhtml"
 					style="width:500px;">
 					<ui:define name="label">
+						<h:outputText value="Handicap" />
+					</ui:define>
+					<h:inputTextarea
+						value="#{editProspectManager.prospect.informationIntra.handicap}"
+						cols="60" rows="2" />
+				</s:decorate></td>
+
+		</tr>
+		<tr>
+			<td><s:decorate template="../../layout/display.xhtml"
+					style="width:500px;">
+					<ui:define name="label">
 						<h:outputText value="Objectif" />
 					</ui:define>
 					<h:inputTextarea
 						value="#{editProspectManager.prospect.informationIntra.objectif}"
 						cols="60" rows="2" />
 				</s:decorate></td>
-		</tr>
-		<tr>
 			<td><s:decorate template="../../layout/display.xhtml"
 					style="width:500px;">
 					<ui:define name="label">
