--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -393,6 +393,20 @@
 									<tr>
 										<td><s:decorate template="../layout/edit.xhtml"
 												style="width:600px">
+												<ui:define name="label">Handicap </ui:define>
+												<h:inputTextarea value="#{intraManager.intra.handicap}"
+													cols="60" rows="2" />
+											</s:decorate></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<table border="0" cellspacing="15">
+									<tr>
+										<td><s:decorate template="../layout/edit.xhtml"
+												style="width:600px">
 												<ui:define name="label">Objectifs </ui:define>
 												<h:inputTextarea value="#{intraManager.intra.objectif}"
 													cols="60" rows="2" />
