--- a/WebContent/mz/Intra/editIntra.xhtml
+++ b/WebContent/mz/Intra/editIntra.xhtml
@@ -157,6 +157,16 @@
 						<td><s:decorate template="../layout/display.xhtml"
 								style="width:500px;">
 								<ui:define name="label">
+									<h:outputText value="Handicap" />
+								</ui:define>
+								<h:inputTextarea value="#{intraManager.intra.handicap}"
+									cols="60" rows="2" />
+							</s:decorate></td>
+					</tr>
+					<tr>
+						<td><s:decorate template="../layout/display.xhtml"
+								style="width:500px;">
+								<ui:define name="label">
 									<h:outputText value="Objectif" />
 								</ui:define>
 								<h:inputTextarea value="#{intraManager.intra.objectif}"
