--- a/WebContent/mz/Intra/visuIntra.xhtml
+++ b/WebContent/mz/Intra/visuIntra.xhtml
@@ -190,6 +190,15 @@
 					<td><s:decorate template="../layout/display.xhtml"
 							style="width:500px;">
 							<ui:define name="label">
+								<h:outputText value="Handicap" />
+							</ui:define>
+							<h:outputText value="#{intraManager.intra.handicap}" />
+						</s:decorate></td>
+				</tr>
+				<tr>
+					<td><s:decorate template="../layout/display.xhtml"
+							style="width:500px;">
+							<ui:define name="label">
 								<h:outputText value="Objectif" />
 							</ui:define>
 							<h:outputText value="#{intraManager.intra.objectif}" />
