--- a/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
+++ b/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
@@ -46,6 +46,16 @@
 					</s:decorate></td>
 				<td><s:decorate template="../../layout/display.xhtml">
 						<ui:define name="label">
+							<h:outputText value="Handicap" />
+						</ui:define>
+						<h:inputTextarea
+							value="#{editProspectManager.prospect.informationIntra.handicap}"
+							cols="60" rows="2" />
+					</s:decorate></td>
+			</tr>
+			<tr>
+				<td><s:decorate template="../../layout/display.xhtml">
+						<ui:define name="label">
 							<h:outputText value="Objectif" />
 						</ui:define>
 						<h:inputTextarea
