Affichage de l adresse systématique

--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -220,8 +220,7 @@
 				</table>
 				<rich:collapsiblePanel
 					header="Adresse : (Obligatoire car la formation ne se déroule pas chez PLB)"
-					expanded="true" switchType="client"
-					rendered="#{('En vos locaux').equals(editProspectManager.prospect.prospectDetail.lieu)}">
+					expanded="true" switchType="client">
 					<table border="0" cellspacing="0">
 						<tr>
 							<td><s:decorate template="../../layout/display.xhtml"
