--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -46,8 +46,7 @@
 									</h:selectOneMenu>
 								</s:decorate></td>
 							<td><a:outputPanel id="adresse1">
-									<s:decorate template="../layout/display.xhtml"
-										rendered="#{('En vos locaux').equals(intraManager.prospect.prospectDetail.lieu)}">
+									<s:decorate template="../layout/display.xhtml">
 										<ui:define name="label">
 											<h:outputText value="#{messages['prospect.adresse']}"
 												style="width:500px;" />
@@ -58,8 +57,7 @@
 								</a:outputPanel></td>
 							<td><a:outputPanel id="adresse2">
 									<s:decorate template="../layout/edit.xhtml"
-										style="width:400px;"
-										rendered="#{('En vos locaux').equals(intraManager.prospect.prospectDetail.lieu)}">
+										style="width:400px;">
 										<ui:define name="label">
 											<h:outputText value="#{messages['prospect.ville']}" />
 										</ui:define>
@@ -70,8 +68,7 @@
 						<tr>
 							<td><a:outputPanel id="adresse3">
 									<s:decorate template="../layout/display.xhtml"
-										style="width:400px;"
-										rendered="#{('En vos locaux').equals(intraManager.prospect.prospectDetail.lieu)}">
+										style="width:400px;">
 										<ui:define name="label">
 											<h:outputText value="#{messages['prospect.cp']}" />
 										</ui:define>
@@ -80,8 +77,7 @@
 								</a:outputPanel></td>
 							<td><a:outputPanel id="adresse4">
 									<s:decorate template="../layout/display.xhtml"
-										style="width:500px;"
-										rendered="#{('En vos locaux').equals(intraManager.prospect.prospectDetail.lieu)}">
+										style="width:500px;">
 										<ui:define name="label">
 											<h:outputText value="#{messages['prospect.pays']}" />
 										</ui:define>
