--- a/WebContent/mz/prospect/editProspectClient.xhtml
+++ b/WebContent/mz/prospect/editProspectClient.xhtml
@@ -736,8 +736,7 @@
 							</table>
 							<rich:collapsiblePanel
 								header="Adresse : (Obligatoire car la formation ne se déroule pas chez PLB)"
-								expanded="true" switchType="client"
-								rendered="#{('En vos locaux').equals(searchProspect.prospect.prospectDetail.lieu)}">
+								expanded="true" switchType="client">
 								<table border="0" cellspacing="0">
 									<tr>
 										<td><s:decorate template="../layout/display.xhtml"
