--- a/WebContent/mz/prospect/createDemandeClient.xhtml
+++ b/WebContent/mz/prospect/createDemandeClient.xhtml
@@ -39,15 +39,9 @@
 									<s:decorate template="../layout/edit.xhtml" style="width:400px"
 										rendered="#{demandeClientManager.intra}">
 										<ui:define name="label">#{messages['prospect.lieu']}</ui:define>
-										<h:selectOneMenu
+										<h:inputText
 											value="#{demandeClientManager.prospectDetail.lieu}"
-											style="width:160px; height:20px;">
-											<f:selectItem itemValue="" itemLabel="-- Choisir --" />
-											<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
-											<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
-											<f:selectItem itemValue="A distance" itemLabel="Distance" />
-											<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
-										</h:selectOneMenu>
+											style="width:160px; height:20px;" />
 									</s:decorate>
 								</h:panelGrid>
 							</h:panelGrid></td>
