--- a/WebContent/mz/prospect/prospect.xhtml
+++ b/WebContent/mz/prospect/prospect.xhtml
@@ -170,17 +170,8 @@
 										<s:decorate template="../layout/edit.xhtml"
 											style="width:400px" rendered="#{prospectManager.intra}">
 											<ui:define name="label">#{messages['prospect.lieu']}</ui:define>
-											<h:selectOneMenu
-												value="#{prospectManager.prospectDetail.lieu}"
-												style="width:160px; height:20px;">
-												<f:selectItem itemValue="" itemLabel="-- Choisir --" />
-												<f:selectItem itemValue="Chez PLB Consultant"
-													itemLabel="PLB" />
-												<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
-												<f:selectItem itemValue="A distance" itemLabel="Distance" />
-												<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
-
-											</h:selectOneMenu>
+											<h:inputText value="#{prospectManager.prospectDetail.lieu}"
+												style="width:160px; height:20px;" />
 										</s:decorate>
 									</h:panelGrid>
 								</h:panelGrid></td>
