--- a/WebContent/mz/Intra/editIntra.xhtml
+++ b/WebContent/mz/Intra/editIntra.xhtml
@@ -137,7 +137,7 @@
 									<h:outputText value="Connaissance sujet" />
 								</ui:define>
 								<h:selectOneMenu value="#{intraManager.intra.connaissanceSujet}"
-									style="width:160px; height:20px;" required="true">
+									style="width:160px; height:20px;">
 									<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 									<f:selectItem itemValue="Débutant" itemLabel="Débutant" />
 									<f:selectItem itemValue="Scolaire" itemLabel="Scolaire" />
