Fix intra suivi des ofres

--- a/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
+++ b/WebContent/mz/prospect/fields/_editInfosComplementaires.xhtml
@@ -36,8 +36,8 @@
 						<ui:define name="label">
 							<h:outputText value="Connaissance sujet" />
 						</ui:define>
-						<h:selectOneMenu value="#{intraManager.intra.connaissanceSujet}"
-							style="width:160px; height:20px;" required="true">
+						<h:selectOneMenu value="#{editProspectManager.prospect.informationIntra.connaissanceSujet}"
+							style="width:160px; height:20px;">
 							<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 							<f:selectItem itemValue="Débutant" itemLabel="Débutant" />
 							<f:selectItem itemValue="Scolaire" itemLabel="Scolaire" />
